PCS BAckup 26Dec2023/Backup-Source/objects/GCP_DOH_Trade_Partner_NDC__c.object
<CustomObject>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GCP_DOH_Trade_Partner_NDC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GCP_Backorder_RX__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GCP Backorder RX</label>
        <referenceTo>Vision_GCP_Backorder_OTC__c</referenceTo>
        <relationshipLabel>GCP DOH Trade Partner NDC</relationshipLabel>
        <relationshipName>GCP_DOH_Trade_Partner_NDC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GCP_Backorder_SRX__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GCP Backorder SRX</label>
        <referenceTo>Vision_GCP_Backorder_SRx_Rx__c</referenceTo>
        <relationshipLabel>GCP DOH Trade Partner NDC</relationshipLabel>
        <relationshipName>GCP_DOH_Trade_Partner_NDC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_8_Week__c</fullName>
        <formula>OR( Vision_GCP_W1_DOH__c &gt; 0 ,Vision_GCP_W2_DOH__c  &gt; 0 ,Vision_GCP_W3_DOH__c  &gt; 0 ,Vision_GCP_W4_DOH__c  &gt; 0 ,Vision_GCP_W5_DOH__c  &gt; 0 ,Vision_GCP_W6_DOH__c  &gt; 0 ,Vision_GCP_W7_DOH__c  &gt; 0 ,Vision_GCP_W8_DOH__c  &gt; 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is 8 Week</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>GCP DOH Trade Partner NDC</relationshipLabel>
        <relationshipName>GCP_DOH_Trade_Partner_NDC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QoH_Qty_Sold_Pct__c</fullName>
        <formula>((vision_gcp_w4_quantity_sold__c -  vision_gcp_w3_quantity_sold__c)/vision_gcp_w3_quantity_sold__c)*100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QoH Qty Sold Pct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QoH_Qty_Sold__c</fullName>
        <formula>Vision_Gcp_W4_QOH__c  /  vision_gcp_w4_quantity_sold__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QoH Qty Sold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value_W1__c</fullName>
        <formula>Vision_GCP_W1_QOH__c  *  vision_gcp_wac_price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value W1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value_W2__c</fullName>
        <formula>Vision_GCP_W2_QOH__c  *  vision_gcp_wac_price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value_W2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value_W3__c</fullName>
        <formula>Vision_GCP_W3_QOH__c  *  vision_gcp_wac_price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value_W3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_GCP_High_Flag__c</fullName>
        <label>GCP_High_Flag</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_GCP_Low_Flag__c</fullName>
        <label>GCP Low Flag</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_GCP_Unique_Identifier__c</fullName>
        <label>GCP_Unique_Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_GCP_Update_Date__c</fullName>
        <description>This field is when GCP is pulling their data</description>
        <label>Data Lake Update Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_GCP_W1_DOH__c</fullName>
        <label>GCP_W1_DOH</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_GCP_W1_QOH__c</fullName>
        <label>GCP W1 QOH</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_GCP_W2_DOH__c</fullName>
        <label>GCP_W2_DOH</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_GCP_W2_QOH__c</fullName>
        <label>GCP W2 QOH</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_GCP_W3_DOH__c</fullName>
        <label>GCP_W3_DOH</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_GCP_W3_QOH__c</fullName>
        <label>GCP W3 QOH</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_GCP_WAC_Value__c</fullName>
        <label>GCP WAC Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Is_In_Backorder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is In Backorder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_Is_In_Open_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is In Open Order (Internal use)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_SFDC_Order_Status__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SFDC Order Status</label>
        <referenceTo>Vision_GCP_SFDC_Order_Status__c</referenceTo>
        <relationshipLabel>GCP DOH Trade Partner NDC</relationshipLabel>
        <relationshipName>GCP_DOH_Trade_Partner_NDC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vision_Segment__c</fullName>
        <label>Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vision_gcp_ndc__c</fullName>
        <label>GCP NDC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vision_gcp_package_description__c</fullName>
        <label>GCP Package Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vision_gcp_trade_partner_name__c</fullName>
        <label>GCP Trade Partner Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vision_gcp_w1_day__c</fullName>
        <label>GCP W1 Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vision_gcp_w1_quantity_sold__c</fullName>
        <label>GCP W1 Quantity Sold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vision_gcp_w2_day__c</fullName>
        <label>GCP W2 Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vision_gcp_w2_quantity_sold__c</fullName>
        <label>GCP W2 Quantity Sold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vision_gcp_w3_day__c</fullName>
        <label>GCP W3 Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vision_gcp_w3_quantity_sold__c</fullName>
        <label>GCP W3 Quantity Sold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vision_gcp_wac_price__c</fullName>
        <label>GCP_WAC_Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>GCP DOH Trade Partner NDC</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>vision_gcp_trade_partner_name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>vision_gcp_trade_partner_name__c</field>
            <operation>contains</operation>
            <value>Srimayee</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>vision_gcp_trade_partner_name__c</columns>
        <columns>Account_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DOH-NDC-{00000}</displayFormat>
        <label>GCP DOH Trade Partner NDC Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GCP DOH Trade Partner NDC</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>